fixed navbar menu on mobile screen

--- a/static/media-queries.css
+++ b/static/media-queries.css
@@ -2,6 +2,11 @@
 
     .navbar-on-the-righthandside-profile{
         overflow: hidden;
+
+        & .fa-bars{
+            font-size: clamp(1.3rem , 1.35vw , 1.4rem);
+            cursor: pointer;
+        }
         & #navbar{
             position: fixed;
             width: 72%;
@@ -10,9 +15,9 @@
             border-radius: 0rem 0rem 0rem 2rem;
             top:0;
             right: 0;
-            animation: animate-menu ease-in-out 0.5s;
+            /* animation: hide-menu 0.5ms ease-in-out; */
             overflow-y: auto;
-            z-index: 99;
+            z-index: 1;
 
             & #my-list-of-headers{
                 position: relative;
@@ -28,9 +33,6 @@
                 & .navbar-styling{
                     color: white;
                     font-size: clamp(1.1rem , 1.2vw , 1.3rem);
-                    text-decoration: underline wavy white;
-                    text-decoration-thickness:0.05rem;
-                    text-underline-position: under;
                     
                 }
 
@@ -42,6 +44,7 @@
                 font-size: 2rem;
                 right: 10%;
                 color: rgba(243, 95, 73, 0.7);
+                cursor: pointer;
             }
         }
         
@@ -72,7 +75,7 @@
 
 @keyframes animate-menu {
     0%{
-        right:-200px;
+        right:-250px;
         opacity: 0;
     }
     100%{
@@ -88,7 +91,7 @@
       opacity: 1;
     }
     100% {
-      right: -200px;
+      right: -250px;
       opacity: 0;
     }
 }
@@ -122,7 +125,7 @@
             > #my-list-of-headers{
                 display: flex;
                 flex-direction: row;
-                column-gap: clamp(3rem , 2.5vw, 4rem);
+                column-gap: clamp(2rem , 2.5vw, 3rem);
 
             }
         }
@@ -237,7 +240,7 @@
             .my-list-of-headers{
                 display: flex;
                 flex-direction: row;
-                column-gap: clamp(3rem , 2.5vw, 4rem);
+                column-gap: clamp(2rem , 2.5vw, 3rem);
 
             }
         }
@@ -256,9 +259,9 @@
                text-align: left;
                padding: 0rem 0rem;
             }
+
             & .paragraph-underneath-heading-profile{
                 padding: 0rem 2vw 0rem 0rem;
-                text-align: left;
                 font-size: clamp(1.3rem , 1.3vw , 1.4rem);
                 vertical-align: middle;
             }
