--- a/static/styles.css
+++ b/static/styles.css
@@ -126,7 +126,7 @@ header{
         display: flex;
         justify-content: flex-end;
         color: white;
-        font-size: 1.1rem;
+        font-size: clamp(1.25rem , 1.35vw, 1.4rem);
     }
 
 
@@ -139,6 +139,7 @@ header{
             flex-direction: row;
             list-style: none;
 
+
             
             & .navbar-styling{
                 --color-for-navbars:rgba(43, 24, 77, 0.9);
@@ -149,21 +150,18 @@ header{
                 font-weight:var(--fw-semi-bold);
                 padding:0rem 0.1rem;
                 
+                
                 &:hover, :active{
                     --color-for-hover-effect:hsla(0, 0%, 100%, 0.8);
                     border-radius: 0.4rem;
                     color:hsla(0, 0%, 100%, 0.8);
-                    transition:all 0.5s ;
+                    transition:all 0.5s;
+                    cursor: pointer;
                 }  
             }
 
         }
     }
-}
-
-
-#my-list-of-headers li:first-child a{
-    color:hsla(0, 0%, 100%, 0.8) ;
 }
 
 
@@ -174,8 +172,6 @@ section#Home{
             text-align: center;
             font-family: var(--fs-2);
             font-size: clamp(1.6rem , 1.8vw, 2rem);
-
-           
             padding: 0rem 1rem;
             color: var(--color-for-navbars);
             animation: header-1 1.5s ease-in-out 1;
@@ -183,6 +179,12 @@ section#Home{
             margin-bottom: 1rem;
             margin-top: 0.5rem;
             font-weight: var(--fw-bold);
+
+            & .diff-style-for-surname{
+                background: var(--button-for-github);
+                -webkit-background-clip: text; 
+                color: transparent;
+            }
         }
         & .paragraph-underneath-heading-profile{
             font-family: var(--fs-2);
